fix: fix z-index of stickers when user hovers over image

--- a/src/app/components/Sticker/Sticker.scss
+++ b/src/app/components/Sticker/Sticker.scss
@@ -1,5 +1,6 @@
 .draggable {
   position: absolute;
+  z-index: 1;
 
   &:hover {
     cursor: grab;
